package com.example.gestor;

import org.springframework.stereotype.Service;

@Service
public class GestionSensores {

    //limitar el numero de sensores por tipo
    public void numeroSensores(){

    }
}
