package com.example.gestor;

import org.springframework.stereotype.Component;
import org.springframework.stereotype.Controller;

@Controller
public class SensorController {
}
