package com.example.gestor;

import org.springframework.stereotype.Repository;

@Repository
public class SensorRepository {
}
