package com.example.sensorElectricidad;

public class SensorElectricidad {
}
