package com.example.sensorElectricidad;

public class SensorElectricidadService {
}
