@startuml
'https://plantuml.com/class-diagram

package Trafico{
    class SensorTrafico{
        -id: long
        -exceso: boolean
        -estado: boolean
        -tipo: String
        +Sensor(id: long, estado: boolean, exceso: boolean, tipo: String)
        +apagar()
    }
    class SensorTraficoService{
        +avisarExceso()
    }
}
class GestionSensores{
    +crearSensor()
    +eliminarSensor()
    +agregarSensor()
    +avisarExceso()
    +mandarAvisoCalidad()
    +mandarAvisoFuga()
    +avisarPerdidas()
}
class SensorFabrica{
    +crearSensor()
}
abstract class Sensor{
    -id: long
    -estado: boolean
    -tipo: String
    +Sensor(id: long, estado: boolean, tipo: String)
    +apagar()
}
class SensorRepository{
    +findAll()
    +findById()
    +agregarSensor()
    +eliminarSensor()
}
class SensorController{
    +mandarAvisoTrafico()
    +mandarAvisoCalidad()
    +mandarAvisoFuga()
    +avisarPerdidas()
}
package Agua{
    class SensorAgua{
        -id: long
        -detectarFuga: boolean
        -calidad: Calidad
        -estado: boolean
        -tipo: String
        +Sensor(id: long, estado: boolean, exceso: boolean, tipo: String, calidad: Calidad, detectarFuga: boolean)
        +apagar()
    }
    class SensorAguaService{
        +mandarAvisoFuga()
        +mandarAvisoCalidad()
    }
}
package Electricidad{
    class SensorElectricidad{
        -id: long
        -perdidas: long
        -estado: boolean
        -tipo: String
        +Sensor(id: long, estado: boolean, exceso: boolean, tipo: String, perdidas: long)
        +apagar()
    }
    class SensorElectricidadService{
        +avisarPerdidas()
    }
}



SensorTrafico -> SensorTraficoService
SensorAgua -> SensorAguaService
SensorElectricidad -> SensorElectricidadService

SensorTraficoService --> GestionSensores
SensorAguaService --> GestionSensores
SensorElectricidadService --> GestionSensores


note right of Sensor
    todas las clases de sensores extienden de esta
end note
GestionSensores --> SensorController
GestionSensores --> SensorFabrica
SensorFabrica --> Sensor
GestionSensores - SensorRepository
SensorRepository -> SensorController


@enduml